# Naoka

./: .gitignore  BACKGROUND.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  release.yml
Postman Collections/: docs.json
src/api/: .env.example  manage.py  pyproject.toml
src/api/lib/: base.py
src/api/lib/anilist/: __init__.py
src/api/lib/anilist/queries/: list-anime.graphql
src/api/naoka/: asgi.py  constants.py  settings.py  urls.py  utils.py  wsgi.py
src/api/naoka/anime/: apps.py  models.py
src/api/naoka/anime/management/commands/: anime_import.py
src/api/naoka/anime/migrations/: 0001_initial.py
src/api/naoka/characters/: apps.py  models.py
src/api/naoka/characters/migrations/: 0001_initial.py
src/api/naoka/manga/: apps.py
src/api/naoka/media/: admin.py  apps.py  models.py
src/api/naoka/media/management/commands/: flush.py  init.py  providers.py
src/api/naoka/media/migrations/: 0001_initial.py  0002_alter_media_title_en_alter_media_title_es_and_more.py  0003_alter_mappings_mappings_alter_media_genres_and_more.py  0004_alter_media_options_remove_media_id_and_more.py  0005_alter_media_is_adult_alter_media_status.py  0006_alter_media_genres_alter_media_is_adult_and_more.py  0007_alter_media_date_finish_alter_media_title_en_and_more.py
src/api/naoka/media/providers/: __init__.py  base.py
src/api/naoka/media/providers/myanimelist/: __init__.py
src/api/naoka/people/: apps.py  models.py
src/api/naoka/people/migrations/: 0001_initial.py
src/api/naoka/utils/: types.py
src/api/refs/: anime-search.jsonc
(+116 files in other folders)
