[tool.poetry]
name = "naoka"
version = "1.0.0"
description = "The public API that collects and serves the data to Naoka."
authors = ["Nyeki.py <nyeki@nyeki.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
django-ninja = "^0.22.2"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
