[tool.poetry]
name = "naoka"
version = "0.1.0"
description = "Naoka's media API."
authors = ["Nyeki.py <nyeki@nyeki.dev>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
validators = "^0.28.1"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
